<resources>
    <string name="app_name">2023_JavierLagoAmoedo</string>
    <string name="imc">IMC</string>
    <string name="calculate">Calculate IMC</string>
    <string name="moreinfo">More info</string>
    <string name="metros">Meters</string>
    <string name="kg">Kg</string>
    <string name="calculate_2">CALCULATE</string>
    <string name="end_app">END APP</string>
    <string name="wikipedia">https://es.wikipedia.org/wiki/Indice_de_masa_corporal</string>
    <string name="llamada">OMS Madrid 91555555</string>
    <string name="ok">OK</string>
    <string name="back">Back</string>
</resources>