<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/marco">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/marco"
        android:background="@color/interior"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:textColor="@color/marco"
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imc"
            android:textAlignment="center"
            android:textSize="@dimen/titulo"/>


        <RadioGroup
            android:checkedButton="@id/rbt_wikipedia"
            android:layout_margin="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <RadioButton
                android:id="@+id/rbt_wikipedia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wikipedia"/>

            <RadioButton
                android:layout_gravity="left"
                android:id="@+id/rbt_llamada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/llamada"
                />



        </RadioGroup>



        <Button
            android:id="@+id/boton_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:onClick="btnok"/>
        <Button
            android:id="@+id/boton_volver_atras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"/>


    </LinearLayout>


</LinearLayout>